docs: add documentation for list Openings
