# handler/listOpening.go
@@ -6,6 +6,15 @@ import (
 	"net/http"
 )
 
+// @BasePath /api/v1
+// @Summary List openings
+// @Description List all job openings
+// @Tags Openings
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
